--- a/MillimanAccessPortal/MillimanAccessPortal/appsettings.json
+++ b/MillimanAccessPortal/MillimanAccessPortal/appsettings.json
@@ -50,7 +50,7 @@
     "DefaultPasswordResetEmailText": "A password reset request has been received for your Milliman Access Portal account.",
     "ErrorMessageTemplate": "An error occured. Please contact <a href=\"mailto:map.support@milliman.com?subject={0}\">map.support@milliman.com</a> for assistance.",
     "ClientDomainListCountLimit": 3,
-    "NonLimitedDomains":  "milliman.com"  // Separate multiple domains with ';'
+    "NonLimitedDomains":  "milliman.com;"
   },
   "SupportEmailAddress": "support.78832.5ad4ee0bf11242a6@helpscout.net",
   "PasswordExpirationDays": "60",
