--- a/MillimanAccessPortal/MillimanAccessPortal/ViewTemplates/ClientAdmin/Index.cshtml.template
+++ b/MillimanAccessPortal/MillimanAccessPortal/ViewTemplates/ClientAdmin/Index.cshtml.template
@@ -112,7 +112,10 @@
                     <h4 class="form-section-title">Security Information</h4>
                     <div class="form-input-container">
                         <div class="form-input form-input-selectized flex-item-12-12">
-                            <label class="form-input-selectized-title" asp-for="AcceptedEmailDomainList"></label>
+                            <label class="form-input-selectized-title" asp-for="AcceptedEmailDomainList">
+								Approved Email Domain List
+								<span id="email-domain-limit-label"></span>
+							</label>
                             <div>
                                 <input asp-for="AcceptedEmailDomainList" class="selectize-custom-input" />
                             </div>
