--- a/MillimanAccessPortal/MillimanAccessPortal/ViewTemplates/Account/UserAgreement.cshtml.template
+++ b/MillimanAccessPortal/MillimanAccessPortal/ViewTemplates/Account/UserAgreement.cshtml.template
@@ -1,5 +1,10 @@
 @model MillimanAccessPortal.Models.AccountViewModels.UserAgreementViewModel
 
+@{
+    ViewData["Title"] = "";
+    Layout = "_Layout";
+}
+
 @section CSS {
   <% for (var css in htmlWebpackPlugin.files.css) { %>
   <link href="<%= htmlWebpackPlugin.files.css[css] %>" rel="stylesheet">
@@ -15,7 +20,7 @@
   <form id="content-disclaimer-form">
     @Html.AntiForgeryToken()
     <div class="button-container">
-      <button id="accept-button" type="button" class="green-button">Accept</button>
+      <button id="accept-button" type="button" class="green-button" >Accept</button>
     </div>
   </form>
 </div>
